Changes in styles in character selector

--- a/Index.html
+++ b/Index.html
@@ -12,37 +12,42 @@
         <div class="select-character-block" style="width: 10%;display:inline-block">
             <a onclick="" href="#" style="float: left"><img style="height:150px; width:150px; " src="images/arrow-point-to-left.png"/></a>
         </div>
-        <div class="select-character-block" style="width: 79%;display:inline-block">
+        <div class="select-character-block" style="width: 79%;display:inline-block; background-color: #4D727B">
             <h1>SELECT CHARACTER</h1>
-            <h4>Anna Lukanina</h4>
-            <div class="character"></div>
-            <div id="characteristicsPanel">
-                <h4>Сharacteristics</h4>
-                <div class="characteristics-list">
-                    <table>
-                        <thead>
-                        <tr>
-                            <td style="width:150px"></td>
-                            <td>BEGINNER</td>
-                            <td>FAMILIAR</td>
-                            <td>PROFICIENT</td>
-                            <td>EXPERT</td>
-                            <td>MASTER</td>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>
-                            <td>Adobe InDesign</td>
-                            <td colspan="5">
-                                <div class="horizontal-bar"></div>
-                            </td>
-                        </tr>
-                        </tbody>
-                    </table>
-                    <h4>Additional information</h4>
+            <div style="box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);">
+                <div style="display:inline-block"">
+                    <h4>Anna Lukanina</h4>
+                    <div class="character"></div>
                 </div>
+                <div id="characteristicsPanel" style="box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22); display:inline-block">
+                    <h4>СHARACTERISTICS</h4>
+                    <div class="characteristics-list">
+                        <table>
+                            <thead>
+                            <tr>
+                                <td style="width:150px"></td>
+                                <td>BEGINNER</td>
+                                <td>FAMILIAR</td>
+                                <td>PROFICIENT</td>
+                                <td>EXPERT</td>
+                                <td>MASTER</td>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td>Adobe InDesign</td>
+                                <td colspan="5">
+                                    <div class="horizontal-bar"></div>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                        <h4>Additional information</h4>
+                    </div>
+                </div>
+
             </div>
-            <button href="#" onclick="startLife()"><b>START</b></button>
+            <button onclick="startLife()" style="font-size: 50px;">START</button>
         </div>
         <div style="width: 10%;display:inline-block;">
             <a onclick="" href="#" style="float: right" ><img style="height:150px; width:150px;" src="images/arrow-point-to-right.png"/></a>
